# Tetris

./: .doxyfile  .gitignore  Doxyfile  README.md  TetrisModel.mdj  Untitled.mdj  todo .txt  todo.txt
Tetris/: Board.h  Brick.h  CMakeLists.txt  Direction.h  Game.h  GameState.h  Position.h  Shape.h  Shapes.h  main.cpp
Tetris/console/: Board.cpp  Brick.cpp  BrickBag.cpp  BrickModel.cpp  CMakeLists.txt  Controller.cpp  Difficulty.cpp  Direction.cpp  Facade.cpp  Game.cpp  Player.cpp  Position.cpp  View.cpp  main.cpp
Tetris/difficulties/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  ff.sh
Tetris/gui/: Board.cpp  Board.h  Brick.cpp  Brick.h  CMakeLists.txt  DrawBoard.cpp  DrawBoard.h  GuiController.cpp  GuiController.h  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  TetrisView.h  ViewController.cpp  ViewController.h  gameoverdialog.ui  helpdialog.h  helpdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave
Tetris/metier/: Board.h  Brick.h  BrickBag.h  BrickModel.h  BrickState.h  CMakeLists.txt  Controller.h  Difficulty.h  Direction.h  Facade.h  Game.h  GameState.h  Observable.h  Observer.h  Player.h  Position.h  Random.h  Shape.h  Shapes.h  UserActions.h  View.h  main.cpp  view.h
Tetris/tests/: CMakeLists.txt  testPosition.cpp  tests.cpp
html/search/: all_0.js  all_2.js  all_3.js  all_8.js  classes_0.js  classes_1.js  classes_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  searchdata.js
latex/: _board_8h.tex  _board_8h_source.tex  _brick_8h_source.tex  _brick_state_8h_source.tex  _difficulty_8h_source.tex  _direction_8h_source.tex  _facade_8h_source.tex  _game_8h_source.tex  _game_state_8h_source.tex  _observable_8h_source.tex  _observer_8h_source.tex  _player_8h_source.tex  _position_8h_source.tex  _random_8h_source.tex  _shape_8h_source.tex  _shapes_8h_source.tex  annotated.tex  class_board.tex  class_brick.tex  class_difficulty.tex  class_direction.tex  class_facade.eps  class_facade.tex  class_game.tex  class_observable.eps  class_observable.tex  class_observer.tex  class_position.tex  class_shapes.tex  class_user.tex  files.tex  hierarchy.tex  refman.tex  struct_shape.tex
